# Folktales

./: .gitignore  README.md  annotate_folktales.ipynb  constructive_adaptation.ipynb  event_tree.json  generate.ipynb  generated_story.json  pyproject.toml  query.json  sbc_tools.py
annotation/: event_classifier.ipynb  event_instance_name.ipynb  main.py  utils.py  visualization.py
annotation/data/: event_test.json  event_with_descriptions copy.json
annotation/evaluator/: node.py  tree.py
annotation/models/: agent.py  event.py  folktale.py  place.py  role.py
annotation/tools/: agent_extractor.py  event_classifier.py  event_extractor.py  event_instance_name.py  genre_extractor.py  object_extractor.py  place_extractor.py  relationship_extractor.py
annotation/utils/: loader.py
common/: common.py  loader.py  main.py  regex_utils.py
common/models/: agent.py  event.py  folktale.py  object.py  place.py  role.py
common/utils/: format_utils.py  loader.py  regex_utils.py
data/: folktales.ttl
data/examples/: cinderella.json
data/hierarchies/: event.json  event_with_descriptions.json  object.json  place.json  role.json
generation/: evaluator.ipynb  main.py  story_generator.py
generation/adaptation/: alignment.py  astar.py  node.py  query.py  similarity.py  story_builder.py
generation/data/: folktales.ttl  pearl.ttl
generation/experiments/: loader.py  main.py
generation/ontology/: event_retriever.py  folktale_graph.py  graph_retriever.py  lcs.py  namespaces.py  rmq_fcb.py  similarity_calculator.py
generation/utils/: loader.py  sbc_tools.py
(+8 files in other folders)
